--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,6 +56,7 @@
   --color-text-schema: var(--grey-700);
   --color-text-schema-secondary: var(--grey-400);
   --color-border-schema: var(--grey-250);
+  --color-text-table-header: var(--grey-400);
 
   --text-xxs: 12px;
   --text-xs: 13px;
